src/syntax_analysis/snapshots/rust_monkey_interpreter__syntax_analysis__tests__test_syntax_analysis_for_boolean_expression_case1.snap
---
source: src/syntax_analysis/tests.rs
expression: returned_abstract_syntax_tree
---
{
  "program": [
    {
      "EXPRESSION_STATEMENT": {
        "initial_expression_token": {
          "token_type": "TRUE",
          "literal": "TRUE"
        },
        "expression": {
          "BOOLEAN": {
            "boolean_token": {
              "token_type": "TRUE",
              "literal": "TRUE"
            }
          }
        }
      }
    }
  ],
  "syntax_parsing_errors": []
}
