src/syntax_analysis/snapshots/rust_monkey_interpreter__syntax_analysis__tests__test_syntax_analysis_for_call_expression_case1.snap
---
source: src/syntax_analysis/tests.rs
expression: returned_abstract_syntax_tree
---
{
  "abstract_syntax_tree": [
    {
      "EXPRESSION": {
        "expression": {
          "CALL": {
            "function": {
              "IDENTIFIER": {
                "identifier_token": {
                  "token_type": "IDENTIFIER",
                  "literal": "add"
                }
              }
            },
            "arguments": [
              {
                "INTEGER": {
                  "integer_token": {
                    "token_type": "INTEGER",
                    "literal": "5"
                  }
                }
              },
              {
                "INTEGER": {
                  "integer_token": {
                    "token_type": "INTEGER",
                    "literal": "12"
                  }
                }
              }
            ]
          }
        }
      }
    }
  ],
  "syntax_parsing_errors": []
}
