src/syntax_analysis/snapshots/rust_monkey_interpreter__syntax_analysis__tests__test_syntax_analysis_for_combined_statements_case1.snap
---
source: src/syntax_analysis/tests.rs
expression: returned_abstract_syntax_tree
---
{
  "program": [
    {
      "LET_STATEMENT": {
        "let_token": {
          "token_type": "LET",
          "literal": "let"
        },
        "identifier_token": {
          "token_type": "IDENTIFIER",
          "literal": "x"
        }
      }
    },
    {
      "RETURN_STATEMENT": {
        "return_token": {
          "token_type": "RETURN",
          "literal": "RETURN"
        }
      }
    }
  ],
  "syntax_parsing_errors": []
}
