src/syntax_analysis/snapshots/rust_monkey_interpreter__syntax_analysis__tests__test_syntax_analysis_for_grouped_expressions_case3.snap
---
source: src/syntax_analysis/tests.rs
expression: returned_abstract_syntax_tree
---
{
  "program": [
    {
      "EXPRESSION_STATEMENT": {
        "initial_expression_token": {
          "token_type": "INTEGER",
          "literal": "1"
        },
        "expression": {
          "INFIX": {
            "left_hand_expression": {
              "INFIX": {
                "left_hand_expression": {
                  "INTEGER": {
                    "integer_token": {
                      "token_type": "INTEGER",
                      "literal": "1"
                    }
                  }
                },
                "operator_token": {
                  "token_type": "PLUS",
                  "literal": "+"
                },
                "right_hand_expression": {
                  "INFIX": {
                    "left_hand_expression": {
                      "INTEGER": {
                        "integer_token": {
                          "token_type": "INTEGER",
                          "literal": "2"
                        }
                      }
                    },
                    "operator_token": {
                      "token_type": "PLUS",
                      "literal": "+"
                    },
                    "right_hand_expression": {
                      "INTEGER": {
                        "integer_token": {
                          "token_type": "INTEGER",
                          "literal": "3"
                        }
                      }
                    }
                  }
                }
              }
            },
            "operator_token": {
              "token_type": "PLUS",
              "literal": "+"
            },
            "right_hand_expression": {
              "INTEGER": {
                "integer_token": {
                  "token_type": "INTEGER",
                  "literal": "4"
                }
              }
            }
          }
        }
      }
    }
  ],
  "syntax_parsing_errors": []
}
